--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-project(MyQttSense_esp32)
+project(MiniQttSensor_esp32)
 target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "ca_certificates/broker.crt" TEXT)
 
 
